--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -37,31 +37,53 @@ hr{
   margin-top: 0px;
 }
 /*Parte do site Informações*/
-#Jogos,#Arts
+#socialMedia a
 {
-  margin: 5% 5%;
+  color: white;
+  margin-left: 25px;
+  margin-top: 10px;
+}
+#Jogos
+{
+  margin: 10% 5%;
   padding: 5%;
 }
+#Artes{
+  margin-top:20%;
+  margin-bottom: 20%;
+}
+.carousel-inner img{
+  border: #ff4b2b 4px solid;
+}
+.logo
+{
+  margin-bottom: 5%;
+}
 * {box-sizing:border-box;}
-.Info{
-  width: 100%;
-  margin-top: 25%;
-  box-sizing: border-box;
-}
-.SobreMin
-{
+#Perfil{
+  background: url("../Img/Miles\ pixel\ art.png") no-repeat;
+  background-size: 100%;
   border-radius: 50%;
-  width: 50%;
+  width: 300px;
+  height: 300px;
+  transition: background 2s;
+
 }
-#text
+#Perfil:hover
 {
-  word-wrap: break-word;
-  max-width:800px;
-  margin-top: 50px;
-  padding: 20px;
-  color: rgb(255, 255, 255);
+  background: url("../Img/IMG_20180430_203001_159.jpg");
+  display: block;
+  background-size: 100%;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  transition: background 2s;
 }
-#text-2
+
+.Info{
+  margin-top: 25%;
+}
+#text, #text-2
 {
   word-wrap: break-word;
   max-width:800px;
@@ -72,23 +94,28 @@ hr{
 /*Mudança Estilização de textos*/
 #Skills
 {
-  margin: 5%;
-}
-#Skills img
-{
-  width:45%;
-  border-radius: 20%;
-}
-#Skills p
-{
-  margin-top: 25px;
-  font-size: 1.2em;
+  margin-top:5%;
+  margin-bottom: 20%;
+  box-sizing: border-box;
+  margin-top: 5px;
+  font-size: .9em;
   color: #ffffff;
   font-weight: bolder;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-transform: uppercase;
+  
 }
-
+#Skills img
+{
+  width:10%;
+  border-radius: 20%;
+}
+#Skills h3
+{
+  color: #df3e23;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
 h4
 {
   text-align: center;
@@ -121,7 +148,26 @@ h2
   color: rgb(0, 0, 0);
   font-weight: bolder;
 }
-
+.projetoBackImage
+{
+  width: 500px;
+  height: 700px;
+  background: url("../Img/Gameficando o futuro.png") no-repeat; 
+  background-size: 500px;
+}
+.projetoBackImage p{
+  color: black;
+  word-wrap: break-word;
+  max-width: 400px;
+}
+.projetoBackImage h3{color:white; margin-top: 50px; background-color: #11070b;}
+#text-project{
+  background-color: rgba(255,255,255,.5);
+  margin-top: 225px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: large;
+}
 .icons img{
   width: 8%;
   padding: 0px;
@@ -164,6 +210,9 @@ padding:0px;
 }
 #Contato a:hover{
   color:#ff5233;
+}
+#Contato div{
+  margin-top: 10%;
 }
 .contato
 {
