--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -87,9 +87,14 @@ hr{
 {
   word-wrap: break-word;
   max-width:800px;
-  margin-top: 50px;
+  margin-top: 150px;
   padding: 20px;
   color: rgb(255, 255, 255);
+}
+#text-2{
+  word-wrap: break-word;
+  max-width: 1000px;
+  margin-top: 0px;
 }
 /*Mudança Estilização de textos*/
 #Skills
