--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -1,6 +1,6 @@
 body
 {
-    background: #11070b;
+    background: #000000;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
 }
@@ -97,15 +97,9 @@ header
   width:10%;
   border-radius: 20%;
 }
-#Skills h3
-{
-  color: #df3e23;
-  font-weight: bold;
-  margin-bottom: 50px;
-}
 h3,h2
 {
-  color: #df3e23;
+  color: #ffffff;
   font-weight: bold;
 }
 h2
@@ -116,11 +110,9 @@ h2
 /* Lista de Jogos parte de estilização do mesmo icons img e outros*/
 #container{
   border-radius: 30px 30px 0px 30px;
-  background-color: #ffffff;
   width: 320px;
   height: 280px;
   margin-top: 20px;
-  border: solid 2px #ff4b2b;
 }
 #container p{
   color: rgb(0, 0, 0);
@@ -148,7 +140,7 @@ h2
 }
 #download
 {
-  margin-left: 145px;
+  margin-left: 80px;
 }
 #download a:hover
 {
@@ -167,7 +159,7 @@ padding:0px;
   background:url(../Img/navbarNight.png) no-repeat;
 }
 #Contato a{
-  color: #df3e23;
+  color: white;
   text-decoration: none;
 }
 #Contato a:hover{
