--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -127,9 +127,9 @@ h2
 }
 
 #text-project{
-  background-color: rgba(255,255,255,.5);
-  margin-top: 325px;
-  color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-top: 425px;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: large;
 }
@@ -235,6 +235,9 @@ padding:0px;
   #Skills img
   {
     width: 20%;
+  }
+  #text-project{
+    margin-top: 225px;
   }
   .projetoBackImage
   { 
