--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -17,23 +17,39 @@ html
 header
 {
     background-image: url("../Img/GameMobile.png");
+    filter:drop-shadow(0px 0px 15px rgb(95, 227, 245));
     background-repeat: no-repeat;
     background-position: center;
     padding: 350px;
 }
+
 .p-2{
   padding: .5rem!important;
 }
 /*Parte do site Informações*/
+#socialMedia .iconify { width: 36px; height: 36px; }
 #socialMedia a
 {
   color: white;
   margin-left: 25px;
   margin-top: 10px;
 }
+#socialMedia a:hover
+{
+  filter:drop-shadow(0px 0px 2px white);
+}
 #Jogos
 {
   margin: 5%;
+}
+#games img
+{
+  padding: 10px;
+  border-radius: 25px;
+}
+#games a [src="./Img/Download.png"]:hover
+{
+  filter:drop-shadow(0px 0px 6px rgb(99, 252, 99));
 }
 #Artes{
   margin-top:20%;
@@ -46,6 +62,8 @@ header
 * {box-sizing:border-box;}
 #Perfil{
   background: url("../Img/Miles\ pixel\ art.png") no-repeat;
+  border: #ffffff solid 4px;
+  filter:drop-shadow(0px 0px 6px white);
   background-size: 100%;
   border-radius: 50%;
   width: 300px;
@@ -84,13 +102,12 @@ header
   margin-top:5%;
   margin-bottom: 20%;
   box-sizing: border-box;
-  margin-top: 5px;
-  font-size: .9em;
+  margin-top: 20px;
+  font-size:1.2em;
   color: #ffffff;
   font-weight: bolder;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-transform: uppercase;
-  
+  padding-top:20px ;
 }
 #Skills img
 {
@@ -140,7 +157,7 @@ padding:0px;
   text-decoration: none;
 }
 #Contato a:hover{
-  color:#ff5233;
+  filter:drop-shadow(0px 0px 2px white);
 }
 #Contato div{
   margin-top: 10%;
@@ -152,11 +169,6 @@ padding:0px;
   text-align: center;
   overflow: hidden;
   width: 100%;
-}
-.socialMedia a{
-  text-align: left;
-  margin-left: 5px;
-  font-weight: bold;
 }
 .contato li
 {
