--- a/CSS/Navbar.css
+++ b/CSS/Navbar.css
@@ -10,7 +10,7 @@
 }
 #navbar img:hover
 {
-  filter: contrast(1.75);
+  filter:drop-shadow(0px 0px 4px white);
 }
 #navbar li:last-child{
   position: absolute;
@@ -46,10 +46,9 @@ ul{
 {
   #navbar a {
   padding-left: 20px;
-  font-style: Helvetica;
   }
   #navbar li:last-child{
-    position: relative;
+  position: relative;
   margin-left: 0px;
 }
 }
