--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -47,7 +47,7 @@ header
   padding: 10px;
   border-radius: 25px;
 }
-#games a [src="./Img/Download.png"]:hover
+#games a [src="./Img/Jogar.png"]:hover
 {
   filter:drop-shadow(0px 0px 6px rgb(99, 252, 99));
 }
