--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -1,6 +1,6 @@
 body
 {
-    background: #000000;
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
 }
@@ -145,12 +145,15 @@ div{
 display:block;
 padding:0px;
 }
+.contato
+{
+  background:url(../Img/navbarNight.png) no-repeat;
+}
 #Contato
 {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   font-weight: bold;
-  background:url(../Img/navbarNight.png) no-repeat;
 }
 #Contato a{
   color: white;
@@ -160,7 +163,7 @@ padding:0px;
   filter:drop-shadow(0px 0px 2px white);
 }
 #Contato div{
-  margin-top: 10%;
+  margin-top: 10px;
 }
 .contato
 {
@@ -184,29 +187,18 @@ padding:0px;
 /* Responsividade */
 @media(max-width:800px)
 {
-  #Jogos
-  {
-    margin: 10%;
-  }
   #text
   {
     word-wrap: break-word;
-    max-width:600px;
-    margin-left:2%;
-    margin-bottom: 5%;
+    max-width:300px;
     color: rgb(255, 255, 255);
   }
-  header
+  #Home
   {
     background-image: url("../Img/GameMobile.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 90%;
-    padding: 350px;
-    padding-top: 430px;
     padding-right: 0px;
     background-position: center;
-    background-size: 100%;
+    background-size: 90%;
   }
 
   .SobreMin
@@ -214,9 +206,9 @@ padding:0px;
     border-radius: 80%;
     width: 40%;
   }
-  .text
+  #text, #text-2
   {
-    width: 100%;
+    margin: 0% 10%;
   }
   #text font{
     padding-top:50px;
@@ -231,10 +223,6 @@ padding:0px;
   }
   #text-project{
     margin-top: 225px;
-  }
-  .projetoBackImage
-  { 
-    background-size: 200%;
   }
   #container
   {
