--- a/CSS/BodyStyle.css
+++ b/CSS/BodyStyle.css
@@ -14,10 +14,9 @@ html
   margin: auto;
   text-align: center;
 }
-header
+#Home
 {
-    background-image: url("../Img/GameMobile.png");
-    filter:drop-shadow(0px 0px 15px rgb(95, 227, 245));
+    background: url("../Img/GameMobile.png") 0px 0px;
     background-repeat: no-repeat;
     background-position: center;
     padding: 350px;
@@ -62,8 +61,7 @@ header
 * {box-sizing:border-box;}
 #Perfil{
   background: url("../Img/Miles\ pixel\ art.png") no-repeat;
-  border: #ffffff solid 4px;
-  filter:drop-shadow(0px 0px 6px white);
+
   background-size: 100%;
   border-radius: 50%;
   width: 300px;
@@ -88,13 +86,13 @@ header
 #text, #text-2
 {
   word-wrap: break-word;
-  max-width:800px;
-  margin-top: 150px;
-  padding: 20px;
+  align-self:center;
   color: rgb(255, 255, 255);
 }
 #text-2{
-  margin-top: 0px;
+  max-width:880px;
+  margin-top: 50px;
+  padding: 80px;
 }
 /*Mudança Estilização de textos*/
 #Skills
@@ -187,12 +185,6 @@ padding:0px;
 /* Responsividade */
 @media(max-width:800px)
 {
-  #text
-  {
-    word-wrap: break-word;
-    max-width:300px;
-    color: rgb(255, 255, 255);
-  }
   #Home
   {
     background-image: url("../Img/GameMobile.png");
@@ -200,18 +192,14 @@ padding:0px;
     background-position: center;
     background-size: 90%;
   }
-
+  #text
+  {
+    margin-bottom: 50px;    
+  }
   .SobreMin
   {
     border-radius: 80%;
     width: 40%;
-  }
-  #text, #text-2
-  {
-    margin: 0% 10%;
-  }
-  #text font{
-    padding-top:50px;
   }
   #Skills p{
     font-size:1.5em;
